# selfmade_docker

./: .gitignore  Cargo.toml  README.md
docs/: hackathon-presentation.md  hackathon-speaker-notes.md
sample-project/: Dockerfile  (+1 more)
sample-project/iruka_cnn/: .gitignore  README.md  eval.py  generate_dataset.py  pyproject.toml  receiver_cli.py  sender_cli.py  stream_receiver_cli.py  train.py  visualize_audio_cli.py
sample-project/iruka_cnn/configs/: baseline.yaml  smoke.yaml
sample-project/iruka_cnn/data/: phrases.yaml
sample-project/iruka_cnn/src/iruka_cnn/: __init__.py
sample-project/iruka_cnn/src/iruka_cnn/common/: config.py  device.py  io.py  labels.py  utils.py
sample-project/iruka_cnn/src/iruka_cnn/demo/: __init__.py  acoustic.py
sample-project/iruka_cnn/src/iruka_cnn/receiver/: __init__.py  features.py  infer.py  model.py  preprocess.py  receiver_cli.py  stream_receiver_cli.py  streaming.py
sample-project/iruka_cnn/src/iruka_cnn/sender/: generator.py  sender_cli.py  streaming.py  templates.py
sample-project/iruka_cnn/src/iruka_cnn/training/: augment.py  datagen.py  dataset.py  eval.py  feature_cache.py  metrics.py  prototypes.py  train.py  visualization.py  visualize_audio_cli.py
sample-project/iruka_cnn/tests/: test_acoustic_demo.py  test_build_stream_demo_tool.py  test_datagen.py  test_feature_augment.py  test_receiver_model.py  test_sender.py  test_sender_streaming.py  test_streaming_receiver.py  test_visualization.py
sample-project/iruka_cnn/tools/: __init__.py  benchmark_train_steps.py  build_stream_demo.py  demo_speaker_mic_stream.py
(+17 files in other folders)
